--- a/lite/less/project/header.less
+++ b/lite/less/project/header.less
@@ -71,7 +71,7 @@
 .header {
     position: relative;
     background:#fff url('@{path-img}/header.png') repeat-x 0 0;
-    z-index: 2;
+    z-index: 5;
     
     .logo {
         margin: 5px auto 15px;
